# CubicDoggo_CHAMP

./: README.md  robot_startup.service  start_robot.sh
src/cubic_doggo_moveit_config/config/: cubic_doggo.srdf  joint_limits.yaml
src/my_robot_bringup/launch/: cubic_doggo.with_lifecycle.launch.py
src/my_robot_commander/: CMakeLists.txt
src/my_robot_commander/src/: cubic_doggo_lifecycle.cpp  cubic_doggo_lifecycle_imuNode.cpp
src/my_robot_controller/: CMakeLists.txt  package.xml
src/my_robot_controller/src/: cubic_doggo_joy_control.cpp  cubic_doggo_teleop_key.cpp
src/my_robot_description/urdf/: cubic_doggo.urdf.xacro  cubic_doggo_legB.xacro  cubic_doggo_legF.xacro
src/my_robot_firmware/: CMakeLists.txt
src/my_robot_firmware/include/my_robot_firmware/: hardware_interface_cubic_doggo_dynamixel_u2d2_xl430.hpp
src/my_robot_firmware/src/: hardware_interface_cubic_doggo_dynamixel_u2d2_xl430.cpp
src/my_robot_interface/: CMakeLists.txt
src/my_robot_peripheral/: CMakeLists.txt  package.xml
src/my_robot_peripheral/src/: imu_bno055_node.cpp  rasp_pi_peripheral_node.cpp
